Changes in Canvas. Using dirty strings.